@@ -1,3 +1,8 @@
+2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50309
+	* g++.dg/cpp0x/noexcept11.C: New.
+
 2011-09-06  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Backport from trunk
